# Covid-in-South-Korea-analysis

./: 141.ipynb  pyproject.toml
data/: Population.csv
data/SK_maps/: KOR_adm0.csv  KOR_adm1.csv  KOR_adm2.csv
