[tool.poetry]
name = "jjuoda-ds.1.4"
version = "0.1.0"
description = ""
authors = ["Julius Juodagalvis <julius.juodagalvis@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
seaborn = "^0.11.1"
pandas = "^1.2.1"
plotly = "^4.14.3"
geopandas = "^0.8.2"
scipy = "^1.6.0"
scikit-learn = "^0.24.1"
statsmodels = "^0.12.2"
descartes = "^1.1.0"
kneed = "^0.7.0"

[tool.poetry.dev-dependencies]
ipython = "^7.20.0"
ipykernel = "^5.5.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
